Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19732

TextInput does't have selectionChanged signal

    XMLWordPrintable

Details

    Description

      TextEdit has selectionChaged signal but TextInput does't have it. Should TextInput also have that signal to make components coherent?

      Attachments

        For Gerrit Dashboard: QTBUG-19732
        # Subject Branch Project Status CR V

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes