Use the convential form for the selectedText notify signal name.

Rename selectionChanged to selectedTextChanged to address an apparent
difference to API between TextInput and TextEdit.

Task-number: QTBUG-19732
Change-Id: Ibc589c8b43567cb8d2f8c13f7366e2859c7f09d7
Reviewed-by: Martin Jones <martin.jones@nokia.com>